--- a/dev/assets/index.html
+++ b/dev/assets/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8">
     <title>Главная</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#9298ab">
+    <meta name="msapplication-TileColor" content="#9298ab">
+    <meta name="theme-color" content="#ffffff">
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css">
   </head>
@@ -163,25 +172,25 @@
                 <div class="text-block text-block--small">
                   <p class="text-block__title color-gray">Единовременные консультации</p>
                   <p class="text-block__sub-title">Решение конкретной разовой задачи или потребности</p>
-                  <p class="text-block__content">Если у вас сформирована задача, для решения которой необходима профессиональная помощь, или имеется потребность в чем либо, то мы готовы изучить вопрос и дать понятное развёрнутое предложение.</p>
+                  <p class="text-block__content mb-0">Если у вас сформирована задача, для решения которой необходима профессиональная помощь, или имеется потребность в чем либо, то мы готовы изучить вопрос и дать понятное развёрнутое предложение.</p>
                 </div>
               </div>
               <div class="slidet-vertical__item info-block">
                 <div class="text-block text-block--small">
-                  <p class="text-block__title color-gray">Единовременные консультации</p>
-                  <p class="text-block__sub-title">Решение конкретной разовой задачи или потребности</p>
-                  <p class="text-block__content">Если у вас сформирована задача, для решения которой необходима профессиональная помощь, или имеется потребность в чем либо, то мы готовы изучить вопрос и дать понятное развёрнутое предложение.</p>
+                  <p class="text-block__title color-gray">Консалтинговый проект</p>
+                  <p class="text-block__sub-title">Разработка и реализация комплексного проекта</p>
+                  <p class="text-block__content mb-0">Осуществляем администрирование и экспертное сопровождение комплексных проектов с большим количеством требований и участников. Разрабатываем план управления проектом, содержанием, качеством, управляем коммуникациями и т. д.  Планируем и внедряем комплекс мер управлению организационными изменениями. Предоставляем экспертов с опытом по всем областям. Фиксируем достижение поставленных целей, завершаем проект.</p>
                 </div>
               </div>
               <div class="slidet-vertical__item info-block">
                 <div class="text-block text-block--small">
-                  <p class="text-block__title color-gray">Единовременные консультации</p>
-                  <p class="text-block__sub-title">Решение конкретной разовой задачи или потребности</p>
-                  <p class="text-block__content">Если у вас сформирована задача, для решения которой необходима профессиональная помощь, или имеется потребность в чем либо, то мы готовы изучить вопрос и дать понятное развёрнутое предложение.</p>
+                  <p class="text-block__title color-gray">Длительные партнёрские отношения</p>
+                  <p class="text-block__sub-title">Совместная операционная деятельность на основе аутсорсинга отдельных бизнес-процессов</p>
+                  <p class="text-block__content mb-0">Готовы выполнять отдельные бизнес-процессы, в том числе управленческие, частично осуществлять регулярную операционную деятельность в компании. Готовы нести долю ответственности за успешное функционирование компании и достижение поставленных стратегических целей и показателей.</p>
                 </div>
               </div>
 
-              <a href="#" class="slidet-vertical__btn"></a>
+              <a class="slidet-vertical__btn"></a>
             </div>
           </div>
         </div>
