--- a/dev/assets/industries.html
+++ b/dev/assets/industries.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8">
     <title>О нас</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#9298ab">
+    <meta name="msapplication-TileColor" content="#9298ab">
+    <meta name="theme-color" content="#ffffff">
+    
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css">
   </head>
@@ -79,6 +88,53 @@
             </p>
             <a href="#popup-recall" class="btn btn--ico btn--mail popup mt-3 mr-4">Написать нам</a>
             <a href="#popup-order" class="btn btn--ico btn--file popup mt-3">Запрос на оказание услуг</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="mb-4">
+        <div class="container">
+          <h2>Услуги</h2>
+        </div>
+    </section>
+    <section class="very-dark-bg py-5 mb-5">
+      <div class="container">
+        <div class="owl-carousel carousel carousel--dark">
+          <div class="article-carousel-item article-carousel-item--no-bg">
+            <p class="article__name mb-2">Разбор школы научного менеджмента</p>
+            <p class="article__text mb-2">
+              Слово «управление» имеет русские корни. Слово «менеджмент» – англоязычное слово. По-английски management имеет множество значений, среди которых, управление, руководство. В свою очередь, в английский язык это слово пришло, вероятно, из латинского языка, языка на котором говорили в Римской империи.
+            </p>
+            <p class="article__link-more">
+              <a href="">Подробнее</a>
+            </p>
+          </div>
+          <div class="article-carousel-item article-carousel-item--no-bg">
+            <p class="article__name mb-2">Разбор школы научного менеджмента</p>
+            <p class="article__text mb-2">
+              Слово «управление» имеет русские корни. Слово «менеджмент» – англоязычное слово. По-английски management имеет множество значений, среди которых, управление, руководство. В свою очередь, в английский язык это слово пришло, вероятно, из латинского языка, языка на котором говорили в Римской империи.
+            </p>
+            <p class="article__link-more">
+              <a href="">Подробнее</a>
+            </p>
+          </div>
+          <div class="article-carousel-item article-carousel-item--no-bg">
+            <p class="article__name mb-2">Разбор школы научного менеджмента</p>
+            <p class="article__text mb-2">
+              Слово «управление» имеет русские корни. Слово «менеджмент» – англоязычное слово. По-английски management имеет множество значений, среди которых, управление, руководство. В свою очередь, в английский язык это слово пришло, вероятно, из латинского языка, языка на котором говорили в Римской империи.
+            </p>
+            <p class="article__link-more">
+              <a href="">Подробнее</a>
+            </p>
+          </div>
+          <div class="article-carousel-item article-carousel-item--no-bg">
+            <p class="article__name mb-2">Разбор школы научного менеджмента</p>
+            <p class="article__text mb-2">
+              Слово «управление» имеет русские корни. Слово «менеджмент» – англоязычное слово. По-английски management имеет множество значений, среди которых, управление, руководство. В свою очередь, в английский язык это слово пришло, вероятно, из латинского языка, языка на котором говорили в Римской империи.
+            </p>
+            <p class="article__link-more">
+              <a href="">Подробнее</a>
+            </p>
           </div>
         </div>
       </div>
