Created page services

--- a/dev/assets/contacts.html
+++ b/dev/assets/contacts.html
@@ -60,31 +60,24 @@
       <div class="container">
         <div class="flex-row">
           <div class="workarea__left-side">
-            <img src="img/pic-1.jpg" class="img-block mb-5">
+            <div class="contact-block mb-5">
+              <p class="ico ico--email">mail@something.ru</p>
+              <p class="ico ico--tel">+7 (495) 654-32-10</p>
+              <p class="ico ico--loc">Семёновский переулок, 15,<br>Москва</p>
+            </div>
             <a href="#popup-recall" class="btn btn--ico btn--mail popup">Написать нам</a>
           </div>
           <div class="workarea__content">
             <nav class="second-menu">
-              <a class="second-menu__link second-menu__link--active" href="/about.html">О компании</a>
+              <a class="second-menu__link" href="/about.html">О компании</a>
               <a class="second-menu__link" href="/mission.html">Миссия</a>
               <a class="second-menu__link" href="/founder.html">Основатель</a>
-              <a class="second-menu__link" href="/contacts.html">Контакты</a>
+              <a class="second-menu__link second-menu__link--active" href="/contacts.html">Контакты</a>
             </nav>
-            <h3>Инжиниринг<br>(engineering, инжиниринговые услуги)</h3>
-            <p>
-              - оказание на коммерческой основе различных инженерно-консультационных услуг, широкий спектр работ и услуг, предоставляемых консультационной компанией на основании заключенного контракта. Термин инжиниринг происходит от слова "engineering" - проектировать, устраивать, сооружать, затевать,  изобретать и придумывать.
-            </p>
-            <p>
-              <b>Главная задача инжиниринга</b> – создание или оптимизация бизнес-процессов, внедрение новых технологий, бизнес-моделирование. Инжиниринг является основой для внедрения производственных технологий, технологий управления и менеджмента, от которых непосредственно зависит эффективность работы и последующее развитие фирмы. 
-            </p>
-            <h3>К инжиниринговым услугам относится следующий перечень работ:</h3>
-            <ul>
-              <li>Подготовка технико-экономических обоснований проектов; оказание услуг инженерно-консультационного плана;</li>
-              <li>Выполнение исследовательских  работ;</li>
-              <li>Проектное конструирование и расчетный анализ;</li>
-              <li>Изготовление. разработка и поставка решений и основных средств;</li>
-              <li>Предоставление рекомендаций в области организации производства и управления.</li>
-            </ul>
+            <div class="map">
+                <img src="img/map.svg">
+                <div class="map__item">Москва</div>
+            </div>
           </div>
         </div>
       </div>
