--- a/dev/assets/articles.html
+++ b/dev/assets/articles.html
@@ -41,6 +41,7 @@
               <a href="/articles.html" class="main-menu__link">Банк знаний</a>
               <a href="/services.html" class="main-menu__link">Услуги</a>
               <a href="/about.html" class="main-menu__link">О нас</a>
+              <a href="/" class="main-menu__logo"><img src="img/logo.svg"/></a>
             </nav>
             <a href="#" class="main-menu__close"></a>
           </div>
