--- a/dev/assets/index.html
+++ b/dev/assets/index.html
@@ -41,7 +41,7 @@
               <a href="/articles.html" class="main-menu__link">Банк знаний</a>
               <a href="/services.html" class="main-menu__link">Услуги</a>
               <a href="/about.html" class="main-menu__link">О нас</a>
-              <a href="/" class="main-menu__logo"><img src="img/logo.svg"/></a>
+              <!-- <a href="/" class="main-menu__logo"><img src="img/logo.svg"/></a> -->
             </nav>
             <a href="#" class="main-menu__close"></a>
           </div>
@@ -60,100 +60,99 @@
       <div class="container">
         <div class="flex-row services-main">
           <div class="services-main__preview-item">
-              <div class="text-block services-main__item services-main__item--active" id="service-7">
-                <p class="text-block__title">Управление изменениями</p>
-                <p class="text-block__content">Современная рыночная среда характеризуется большим количеством факторов, влияющих на деятельность фирмы, динамичностью происходящих процессов, постоянно растущими клиентскими требованиями.</p>
-                <p class="text-block__link-more">
-                  <a href="#">Подробнее</a>
-                </p>
-              </div>
-              <div class="text-block services-main__item" id="service-1">
-                <p class="text-block__title">Разработка и внедрение стратегического плана</p>
-                <p class="text-block__content">Руководство (собственник) успешного предприятия, добившегося устойчивого положения на рынке, задаёт цели по дальнейшему росту, связанные с увеличением прибыльности, расширением присутствия в отраслях, продуктовой линейкой, клиентами.</p>
-                <p class="text-block__link-more">
-                  <a href="#">Подробнее</a>
-                </p>
-              </div>
-              <div class="text-block services-main__item" id="service-2">
-                <p class="text-block__title">Развитие кадрового потенциала компании</p>
-                <p class="text-block__content">Всем известна важность кадров в деятельности любой компании. Считается что люди — самый ценный ресурс. Однако мы видим, что на практике человеческий ресурс используется неэффективно.</p>
-                <p class="text-block__link-more">
-                  <a href="#">Подробнее</a>
-                </p>
-              </div>
-              <div class="text-block services-main__item" id="service-3">
-                <p class="text-block__title">Проведение исследований, стратегический анализ</p>
-                <p class="text-block__content">Любая фирма, действующая на рынке, находится в постоянно меняющейся ситуации: изменяются технологии, тренды, предпочтения клиентов, появляются новые факторы, которые необходимо учитывать в своей деятельности.</p>
-                <p class="text-block__link-more">
-                  <a href="#">Подробнее</a>
-                </p>
-              </div>
-              <div class="text-block services-main__item" id="service-4">
-                <p class="text-block__title">Внедрение процессного управления в компании</p>
-                <p class="text-block__content">Любое коммерческое предприятие производит товар или услугу. Важно насколько эффективно это делается с точки зрения количества затрачиваемых трудовых, материальных ресурсов и времени.</p>
-                <p class="text-block__link-more">
-                  <a href="#">Подробнее</a>
-                </p>
-              </div>
-              <div class="text-block services-main__item" id="service-5">
-                <p class="text-block__title">Управление качеством товара или услуги</p>
-                <p class="text-block__content">В современной рыночной экономике, в основе которой лежит производство и потребление товаров и услуг, понятие качество имеет огромное значение.</p>
-                <p class="text-block__link-more">
-                  <a href="#">Подробнее</a>
-                </p>
-              </div>
-              <div class="text-block services-main__item" id="service-6">
-                <p class="text-block__title">Управление рисками</p>
-                <p class="text-block__content">Деятельность фирмы в рыночных условиях сопряжена с влиянием разнообразных факторов и рисков. На любую компанию постоянно действуют самые разные по своей природе риски.</p>
-                <p class="text-block__link-more">
-                  <a href="#">Подробнее</a>
-                </p>
-              </div>
+            <div class="text-block services-main__item services-main__item--active" id="service-7">
+              <p class="text-block__title">Управление изменениями</p>
+              <p class="text-block__content">Современная рыночная среда характеризуется большим количеством факторов, влияющих на деятельность фирмы, динамичностью происходящих процессов, постоянно растущими клиентскими требованиями.</p>
+              <p class="text-block__link-more">
+                <a href="#">Подробнее</a>
+              </p>
             </div>
-            <div class="flex-row services-main__list">
-              <a class="service-block" href="#" data-id="service-1">
-                <div class="service-block__img">
-                    <img src="img/service-1.svg">
-                </div>
-                <p class="service-block__name">Разработка и внедрение стратегического плана</p>
-              </a>
-              <a class="service-block" href="#" data-id="service-2">
-                <div class="service-block__img">
-                    <img src="img/service-2.svg">
-                </div>
-                <p class="service-block__name">Развитие кадрового потенциала компании</p>
-              </a>
-              <a class="service-block" href="#" data-id="service-3">
-                <div class="service-block__img">
-                    <img src="img/service-3.svg">
-                </div>
-                <p class="service-block__name">Проведение исследований, стратегический анализ</p>
-              </a>
-              <a class="service-block" href="#" data-id="service-4">
-                <div class="service-block__img">
-                    <img src="img/service-4.svg">
-                </div>
-                <p class="service-block__name">Внедрение процессного управления в компании</p>
-              </a>
-              <a class="service-block" href="#" data-id="service-5">
-                <div class="service-block__img">
-                    <img src="img/service-5.svg">
-                </div>
-                <p class="service-block__name">Управление качеством товара или услуги</p>
-              </a>
-              <a class="service-block" href="#" data-id="service-6">
-                <div class="service-block__img">
-                    <img src="img/service-6.svg">
-                </div>
-                <p class="service-block__name">Управление рисками</p>
-              </a>
-              <a class="service-block service-block--active" href="#" data-id="service-7">
-                <div class="service-block__img">
-                    <img src="img/service-7.svg">
-                </div>
-                <p class="service-block__name">Управление изменениями</p>
-              </a>
+            <div class="text-block services-main__item" id="service-1">
+              <p class="text-block__title">Разработка и внедрение стратегического плана</p>
+              <p class="text-block__content">Руководство (собственник) успешного предприятия, добившегося устойчивого положения на рынке, задаёт цели по дальнейшему росту, связанные с увеличением прибыльности, расширением присутствия в отраслях, продуктовой линейкой, клиентами.</p>
+              <p class="text-block__link-more">
+                <a href="#">Подробнее</a>
+              </p>
             </div>
+            <div class="text-block services-main__item" id="service-2">
+              <p class="text-block__title">Развитие кадрового потенциала компании</p>
+              <p class="text-block__content">Всем известна важность кадров в деятельности любой компании. Считается что люди — самый ценный ресурс. Однако мы видим, что на практике человеческий ресурс используется неэффективно.</p>
+              <p class="text-block__link-more">
+                <a href="#">Подробнее</a>
+              </p>
+            </div>
+            <div class="text-block services-main__item" id="service-3">
+              <p class="text-block__title">Проведение исследований, стратегический анализ</p>
+              <p class="text-block__content">Любая фирма, действующая на рынке, находится в постоянно меняющейся ситуации: изменяются технологии, тренды, предпочтения клиентов, появляются новые факторы, которые необходимо учитывать в своей деятельности.</p>
+              <p class="text-block__link-more">
+                <a href="#">Подробнее</a>
+              </p>
+            </div>
+            <div class="text-block services-main__item" id="service-4">
+              <p class="text-block__title">Внедрение процессного управления в компании</p>
+              <p class="text-block__content">Любое коммерческое предприятие производит товар или услугу. Важно насколько эффективно это делается с точки зрения количества затрачиваемых трудовых, материальных ресурсов и времени.</p>
+              <p class="text-block__link-more">
+                <a href="#">Подробнее</a>
+              </p>
+            </div>
+            <div class="text-block services-main__item" id="service-5">
+              <p class="text-block__title">Управление качеством товара или услуги</p>
+              <p class="text-block__content">В современной рыночной экономике, в основе которой лежит производство и потребление товаров и услуг, понятие качество имеет огромное значение.</p>
+              <p class="text-block__link-more">
+                <a href="#">Подробнее</a>
+              </p>
+            </div>
+            <div class="text-block services-main__item" id="service-6">
+              <p class="text-block__title">Управление рисками</p>
+              <p class="text-block__content">Деятельность фирмы в рыночных условиях сопряжена с влиянием разнообразных факторов и рисков. На любую компанию постоянно действуют самые разные по своей природе риски.</p>
+              <p class="text-block__link-more">
+                <a href="#">Подробнее</a>
+              </p>
+            </div>
+          </div>
+          <div class="flex-row services-main__list">
+            <a class="service-block" href="#" data-id="service-1">
+              <div class="service-block__img">
+                  <img src="img/service-1.svg">
+              </div>
+              <p class="service-block__name">Разработка и внедрение стратегического плана</p>
+            </a>
+            <a class="service-block" href="#" data-id="service-2">
+              <div class="service-block__img">
+                  <img src="img/service-2.svg">
+              </div>
+              <p class="service-block__name">Развитие кадрового потенциала компании</p>
+            </a>
+            <a class="service-block" href="#" data-id="service-3">
+              <div class="service-block__img">
+                  <img src="img/service-3.svg">
+              </div>
+              <p class="service-block__name">Проведение исследований, стратегический анализ</p>
+            </a>
+            <a class="service-block" href="#" data-id="service-4">
+              <div class="service-block__img">
+                  <img src="img/service-4.svg">
+              </div>
+              <p class="service-block__name">Внедрение процессного управления в компании</p>
+            </a>
+            <a class="service-block" href="#" data-id="service-5">
+              <div class="service-block__img">
+                  <img src="img/service-5.svg">
+              </div>
+              <p class="service-block__name">Управление качеством товара или услуги</p>
+            </a>
+            <a class="service-block" href="#" data-id="service-6">
+              <div class="service-block__img">
+                  <img src="img/service-6.svg">
+              </div>
+              <p class="service-block__name">Управление рисками</p>
+            </a>
+            <a class="service-block service-block--active" href="#" data-id="service-7">
+              <div class="service-block__img">
+                  <img src="img/service-7.svg">
+              </div>
+              <p class="service-block__name">Управление изменениями</p>
+            </a>
           </div>
         </div>
       </div>
