--- a/dev/assets/articles.html
+++ b/dev/assets/articles.html
@@ -60,6 +60,11 @@
       <div class="container">
         <div class="flex-row justify-space-between mb-5">
           <div class="article-list">
+            <form class="search mb-4">
+              <input class="search__input" type="text" name="q" placeholder="Поиск статей" value="">
+              <input class="search__btn" name="s" type="submit" value="Поиск">
+            </form>
+
             <div class="article article-horizontal flex-row">
               <div class="article-horizontal__content">
                 <div class="flex-row article__info mb-2">
@@ -139,27 +144,63 @@
             </p>
           </div>
           <div class="modules__list">
-            <a href="#" class="module-block">
-              <span>Стратегический маркетинг</span>
-            </a>
-            <a href="#" class="module-block">
-              <span>Основы экономики предприятия</span>
-            </a>
-            <a href="#" class="module-block">
-              <span>Управление информационными системами</span>
-            </a>
-            <a href="#" class="module-block">
-              <span>Управление стоимостью бизнеса</span>
-            </a>
-            <a href="#" class="module-block">
-              <span>Управление производством</span>
-            </a>
-            <a href="#" class="module-block">
-              <span>Стратегический менеджмент</span>
-            </a>
-            <div class="w-100 text-right">
-              <a href="#">Посмотреть все модули</a>
+            <div class="owl-carousel carousel-sections carousel-sections--dark">
+              <div>
+                <a href="#" class="module-block">
+                  <span>Стратегический маркетинг</span>
+                </a>
+                <a href="#" class="module-block">
+                  <span>Основы экономики предприятия</span>
+                </a>
+                <a href="#" class="module-block">
+                  <span>Управление информационными системами</span>
+                </a>
+                <a href="#" class="module-block">
+                  <span>Управление стоимостью бизнеса</span>
+                </a>
+              </div>
+              <div>
+                <a href="#" class="module-block">
+                  <span>Управление производством</span>
+                </a>
+                <a href="#" class="module-block">
+                  <span>Стратегический менеджмент</span>
+                </a>
+
+                <a href="#" class="module-block">
+                  <span>Стратегический маркетинг</span>
+                </a>
+                <a href="#" class="module-block">
+                  <span>Основы экономики предприятия</span>
+                </a>
+              </div>
+
+              <div>
+                <a href="#" class="module-block">
+                  <span>Управление информационными системами</span>
+                </a>
+                <a href="#" class="module-block">
+                  <span>Управление стоимостью бизнеса</span>
+                </a>
+                <a href="#" class="module-block">
+                  <span>Управление производством</span>
+                </a>
+                <a href="#" class="module-block">
+                  <span>Стратегический менеджмент</span>
+                </a>
+              </div>
+              <div>
+                <a href="#" class="module-block">
+                  <span>Стратегический маркетинг</span>
+                </a>
+                <a href="#" class="module-block">
+                  <span>Основы экономики предприятия</span>
+                </a>
+              </div>
             </div>
+            <!--<div class="w-100 text-right">
+              <a href="#">Посмотреть все модули</a>
+            </div>-->
           </div>
         </div>
       </div>
