--- a/dev/assets/articles.html
+++ b/dev/assets/articles.html
@@ -205,6 +205,16 @@
         </div>
       </div>
     </section>
+
+    <div class="loading">
+      <div class="sk-folding-cube">
+        <div class="sk-cube sk-cube-1"></div>
+        <div class="sk-cube sk-cube-2"></div>
+        <div class="sk-cube sk-cube-4"></div>
+        <div class="sk-cube sk-cube-3"></div>
+      </div>      
+    </div>
+
     <section>
       <div class="container mb-5">
         <div class="owl-carousel carousel">
